# rust-emulas

./: Cargo.toml
.github/workflows/: ci-release.yml
src/: main.rs
src/cpu/: flags.rs  instruction.rs  interpreter.rs  mod.rs
src/memory/: bus.rs
src/sys/: interfaces.rs  mod.rs
src/sys/linux/: mod.rs  rom_file.rs
